fixed the link to shareIdeas component in about component and removed border from buttons because it made the screen move around too much when the nav buttons were hovered over

--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,14 @@ button {
   cursor: pointer;
 }
 
-a:hover, button:hover {
+ul > a:hover {
   color: #f50f0a;
   border: 1px solid #f50f0a;
+}
+
+button:hover {
+  text-decoration: underline;
+  border: none;
 }
 /* ==========================================================================
   Nav Styles
